--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/indigo-white.css">
+
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
 	 <link rel="stylesheet" href="css/themes/red-white.css"> 
 	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
@@ -29,15 +29,14 @@
 		<div class="tagline">Boris Lorenzonetto | Student At Becode </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/flexdinesh"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/flexdinesh"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/flexdinesh"><i class="fab fa-stack-overflow"></i></a>
-			<a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a>
-			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
-			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
-			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a>
+			<a target="_blank" href="https://github.com/borisbecode/becode-exercice-boris/blob/7f44ea76c30209490f6976e3e5033f0ff30c3e36/MarkdownChallenge/readme.md"><i class="fab fa-github"></i></a>
+
+			<a target="_blank" href="https://www.youtube.com/watch?v=iLu4R1oOKRo"><i class="fab fa-youtube"></i></a>
+			
+			<a target="_blank" href="www.linkedin.com/in/boris-lorenzonetto-61178119b"><i class="fab fa-linkedin"></i></a>
+
+			<a target="_blank" href="https://replit.com/@bisbis"><i class="fab fa-replyd"></i></a>
+			
         </div>
 	</main>
 </body>
