--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@500&display=swap" rel="stylesheet">
 
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
 	 <link rel="stylesheet" href="css/themes/red-white.css"> 
