--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 	
 	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/styles.css">
+
 	
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@500&display=swap" rel="stylesheet">
 
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
-	 <link rel="stylesheet" href="css/themes/red-white.css"> 
+	 <link rel="stylesheet" href="premier.css"> 
+
 	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
