--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm BiS ! </div>
-		<div class="tagline">Boris Lorenzonetto | Student At Becode </div>
+		<div class="tagline">Boris Lorenzonetto | Student At BeCode </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/borisbecode/becode-exercice-boris/blob/7f44ea76c30209490f6976e3e5033f0ff30c3e36/MarkdownChallenge/readme.md"><i class="fab fa-github"></i></a>
