--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 		<div class="tagline">Boris Lorenzonetto | Student At BeCode </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/borisbecode/becode-exercice-boris/blob/7f44ea76c30209490f6976e3e5033f0ff30c3e36/MarkdownChallenge/readme.md"><i class="fab fa-github"></i></a>
+			<a class="bouton" target="_blank" href="https://github.com/borisbecode/becode-exercice-boris/blob/7f44ea76c30209490f6976e3e5033f0ff30c3e36/MarkdownChallenge/readme.md"><i class="fab fa-github"></i></a>
 
-			<a target="_blank" href="https://www.youtube.com/watch?v=iLu4R1oOKRo"><i class="fab fa-youtube"></i></a>
+			<a class="bouton" target="_blank" href="https://www.youtube.com/watch?v=iLu4R1oOKRo"><i class="fab fa-youtube"></i></a>
 			
-			<a target="_blank" href="https://www.linkedin.com/in/boris-lorenzonetto"><i class="fab fa-linkedin"></i></a>
+			<a class="bouton" target="_blank" href="https://www.linkedin.com/in/boris-lorenzonetto"><i class="fab fa-linkedin"></i></a>
 
-			<a target="_blank" href="https://replit.com/@bisbis"><i class="fab fa-replyd"></i></a>
+			<a class="bouton" target="_blank" href="https://replit.com/@bisbis"><i class="fab fa-replyd"></i></a>
 			
         </div>
 	</main>
